# San-AI

./: .bandit  .flake8  .pylintrc  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EAIP_Technical_Specification.xml  EAIP_Technical_Specification.xsd  README.md  codemeta.json  config.json  conftest.py  deepsource.toml  implement_compliance.py  main.py  pyproject.toml  requirements.txt  setup.py  test_cv_module.py  test_main.py  test_main_endpoints.py  test_main_pipeline.py  test_nlp_module.py  test_regulatory.py  test_speech_processor.py
.github/workflows/: main.yml  pylint.yml  python-app.yml  python-package.yml
REPORTS/: GLOBAL_REGULATORY_GAP_ANALYSIS.md
